Move plugin code to its own crate as part of the server
